# fbr_integration

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
fbr_integration/: hooks.py
fbr_integration/config/: desktop.py  docs.py
fbr_integration/fbr_integration/api/: fbr_api.py  handler.py
fbr_integration/fbr_integration/doc_events/: company.py  sales_invoice.py
fbr_integration/fbr_integration/doctype/buyer_province/: buyer_province.js  buyer_province.json  buyer_province.py  test_buyer_province.py
fbr_integration/fbr_integration/doctype/fbr_invoice_settings/: fbr_invoice_settings.js  fbr_invoice_settings.json  fbr_invoice_settings.py  test_fbr_invoice_settings.py
fbr_integration/fbr_integration/doctype/fbr_uom/: fbr_uom.js  fbr_uom.json  fbr_uom.py  test_fbr_uom.py
fbr_integration/fbr_integration/doctype/hs_code/: hs_code.js  hs_code.json  hs_code.py  test_hs_code.py
fbr_integration/fbr_integration/doctype/invoice_type/: invoice_type.js  invoice_type.json  invoice_type.py  test_invoice_type.py
fbr_integration/fbr_integration/doctype/sale_type/: sale_type.js  sale_type.json  sale_type.py  test_sale_type.py
fbr_integration/fbr_integration/setup/: tax_accounts.py
fbr_integration/fixtures/: buyer_province.json  custom_field.json  fbr_uom.json  hs_code.json  invoice_type.json  sale_type.json  scenario_id.json  sro_item_sno.json  sro_schedule_no.json  tax_payer_type.json
fbr_integration/public/desktop_icons/: fbr_integration.json
fbr_integration/public/js/: global_form_controls.js  sales_invoice_fbr.js
(+17 files in other folders)
